CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
project(skills-linux)

add_subdirectory(backtrace)
add_subdirectory(gcc-class-hierarchy)
add_subdirectory(instrument_functions)
add_subdirectory(lock_benchmark)
add_subdirectory(lockfree-statistic)
add_subdirectory(lockfree-objectfactory)
add_subdirectory(c++-disassambly)


